# libclientserver

./: .gitignore  CMakeLists.txt  Doxyfile  JenkinsFile  Makefile  Makefile.Rules  Makefile.am  README  autogen.sh  configure.ac  libclientserver.pc.cmake  libclientserver.pc.in
contrib/: node_client.js
docs/: Doxyfile.in  Makefile.am
examples/: .gitignore  CMakeLists.txt  Makefile  Makefile.am  PollerListen.cpp  SimpleClient.cpp  SimpleServer  SimpleServer.cpp
include/: libclientserver.h
include/libclientserver/: Barrier.h  Buffer.h  Caps.h  Client.h  ClientBase.h  ClientUnix.h  Decoder.h  Encoder.h  Errno.h  FileUtil.h  GroupID.h  HexEncode.h  IClientHandler.h  IDataType.h  INotify.h  IPollable.h  ISelectable.h  IServer.h  IServerConnection.h  IServerHandler.h  ISignalHandler.h  Mutex.h  Notify.h  PIDFile.h  PerfCounter.h  PerfManager.h  Poller.h  Queue.h  RWLock.h  ReadBuffer.h  Request.h  RequestMap.h  RequestMapEntry.h  ScopedLock.h  ScopedReadLock.h  ScopedWriteLock.h  Selector.h  ServerConnectionBase.h  ServerException.h  ServerManager.h  (+12 more)
node/: Makefile.am  libclientserver.js  test-install.js  test.js
src/: Barrier.cpp  Buffer.cpp  CMakeLists.txt  Caps.cpp  Client.cpp  ClientBase.cpp  ClientTCP.cpp  ClientUnix.cpp  ClientUnixSelected.cpp  ClientUnixSelectedConnection.cpp  Crypto.cpp  Decoder.cpp  DirUtil.cpp  Encoder.cpp  Errno.cpp  Exception.cpp  FileUtil.cpp  GroupID.cpp  HexEncode.cpp  IServer.cpp  Makefile  Makefile.am  Mutex.cpp  Notify.cpp  PIDFile.cpp  PerfCounter.cpp  PerfManager.cpp  Poller.cpp  Process.cpp  RWLock.cpp  RateLimit.cpp  ReadBuffer.cpp  Request.cpp  RequestMap.cpp  ScopedLock.cpp  ScopedReadLock.cpp  ScopedSignalBlock.cpp  ScopedWriteLock.cpp  Selector.cpp  Semaphore.cpp  (+35 more)
src/libclientserver/: Buffer.h  Caps.h  Client.h  ClientBase.h  ClientTCP.h  ClientUnix.h  ClientUnixSelected.h  ClientUnixSelectedConnection.h  Crypto.h  Decoder.h  DirUtil.h  Exception.h  FileUtil.h  HashMutex.h  IClientHandler.h  IDataType.h  ISelectable.h  IServer.h  IServerConnection.h  IServerHandler.h  ITimer.h  LazyScopedPtr.h  Optional.h  Poller.h  Process.h  Queue.h  RateLimit.h  Request.h  RequestMap.h  RequestMapEntry.h  SQueue.h  ScopedHashLock.h  ScopedHashLockAll.h  ScopedLock.h  ScopedSignalBlock.h  ScopedWriteLock.h  Semaphore.h  ServerManager.h  ServerPolledConnection.h  ServerSelectedConnection.h  (+28 more)
testing/: Makefile  PIDFile.cpp  StringCheck.cpp  TestClient.cpp  TestClientConnection.cpp  TestFileExists.cpp  TestFileSync.cpp  TestFileWrite.cpp  TestPoller.cpp  TestProcess.cpp  TestSelector.cpp  TestServer.cpp  TestServer.h  TestSetup.h  TestSignalHandler.cpp  TestTimers.cpp
tests/: CMakeLists.txt  LazyScopedPtr.cpp  Makefile.am  Optional.cpp  Queueing.cpp  StringChomp.cpp  StringJoinList.cpp  StringJoinMap.cpp  StringJoinVector.cpp  StringRot13.cpp  StringSplitList.cpp  StringSplitMap.cpp  StringSplitOne.cpp  StringSplitVector.cpp  TaskPool.cpp  TestClientEvents.cpp  TestDirSync.cpp  TestFileRead.cpp  TestFileWrite.cpp  TestHashMutex.cpp  TestNotify.cpp  TestPoller.cpp  TestRequestStringVector.cpp  TestSHA1.cpp  TestSelector.cpp  TestSemaphore.cpp  TestServer.h  TestServerDisconnects.cpp  TestSetup.h  TestSignalHandler.cpp  TestThreadFunction.cpp  TestTimeNanoSeconds.cpp  TestTimers.cpp  TestUDPMCast.cpp  TestUDPMCastClient.cpp  TestUuid.cpp  ThreadPool.cpp  TimerExit.cpp  TimerExitLamba.cpp
