AM_CPPFLAGS=

lib_LTLIBRARIES=libclientserver.la

libclientserver_la_LDFLAGS = -version-info 1:0:0

libclientserver_la_SOURCES= Barrier.cpp \
			    Encoder.cpp \
			    PerfCounter.cpp \
			    Request.cpp \
			    ServerException.cpp \
			    SetGid.cpp \
			    Time.cpp \
			    Buffer.cpp \
			    Errno.cpp \
			    PerfManager.cpp \
			    RequestMap.cpp \
			    ServerManager.cpp \
			    SetUid.cpp \
			    TimerAbort.cpp \
			    Caps.cpp \
			    FileUtil.cpp \
			    PIDFile.cpp \
			    RWLock.cpp \
			    ServerUnixConnection.cpp \
			    SignalHandler.cpp \
			    TimerFunc.cpp \
			    ClientBase.cpp \
			    GroupID.cpp \
			    Poller.cpp \
			    ScopedLock.cpp \
			    ServerUnix.cpp \
			    String.cpp \
			    Timers.cpp \
			    Client.cpp \
			    IServer.cpp \
			    Process.cpp \
			    ScopedReadLock.cpp \
			    ServerUnixSelectedConnection.cpp \
			    Thread.cpp \
			    UserID.cpp \
			    ClientUnix.cpp \
			    Mutex.cpp \
			    RateLimit.cpp \
			    ScopedWriteLock.cpp \
			    ServerUnixSelected.cpp \
			    ThreadPool.cpp \
			    Decoder.cpp \
			    Notify.cpp \
			    ReadBuffer.cpp \
			    Selector.cpp \
			    ServerUnixSelectedListener.cpp \
			    ThreadPoolThread.cpp


include_HEADERS=libclientserver.h

otherincludedir = $(includedir)/libclientserver

otherinclude_HEADERS= libclientserver/Barrier.h \
			libclientserver/Buffer.h \
			libclientserver/Caps.h \
			libclientserver/ClientBase.h \
			libclientserver/Client.h \
			libclientserver/ClientUnix.h \
			libclientserver/Decoder.h \
			libclientserver/Encoder.h \
			libclientserver/Errno.h \
			libclientserver/FileUtil.h \
			libclientserver/GroupID.h \
			libclientserver/IClientHandler.h \
			libclientserver/IDataType.h \
			libclientserver/INotify.h \
			libclientserver/IPollable.h \
			libclientserver/ISelectable.h \
			libclientserver/IServerConnection.h \
			libclientserver/IServer.h \
			libclientserver/IServerHandler.h \
			libclientserver/ISignalHandler.h \
			libclientserver/ITimer.h \
			libclientserver/Mutex.h \
			libclientserver/Notify.h \
			libclientserver/PerfCounter.h \
			libclientserver/PerfManager.h \
			libclientserver/PIDFile.h \
			libclientserver/Poller.h \
			libclientserver/Process.h \
			libclientserver/Queue.h \
			libclientserver/RateLimit.h \
			libclientserver/ReadBuffer.h \
			libclientserver/Request.h \
			libclientserver/RequestMapEntry.h \
			libclientserver/RequestMap.h \
			libclientserver/RWLock.h \
			libclientserver/ScopedLock.h \
			libclientserver/ScopedReadLock.h \
			libclientserver/ScopedWriteLock.h \
			libclientserver/Selector.h \
			libclientserver/ServerConnectionBase.h \
			libclientserver/ServerException.h \
			libclientserver/ServerManager.h \
			libclientserver/ServerUnixConnection.h \
			libclientserver/ServerUnix.h \
			libclientserver/ServerUnixSelectedConnection.h \
			libclientserver/ServerUnixSelected.h \
			libclientserver/ServerUnixSelectedListener.h \
			libclientserver/SetGid.h \
			libclientserver/SetUid.h \
			libclientserver/SetUser.h \
			libclientserver/SignalHandler.h \
			libclientserver/String.h \
			libclientserver/Thread.h \
			libclientserver/ThreadPool.h \
			libclientserver/ThreadPoolThread.h \
			libclientserver/Time.h \
			libclientserver/TimerAbort.h \
			libclientserver/TimerFunc.h \
			libclientserver/Timers.h \
			libclientserver/UserID.h



