
AM_CPPFLAGS=-I../src/
LDADD=../src/.libs/libclientserver.a -lcap -lpthread -lrt
CFLAGS=@CHECK_CFLAGS@

TESTS=PIDFile \
	Queueing \
	StringCheck \
	StringChomp \
	StringJoinList \
	StringJoinMap \
	StringJoinVector \
	StringSplitList \
	StringSplitMap \
	StringSplitOne \
	StringSplitVector \
	TestClientConnection \
	TestClient \
	TestClientEvents \
	TestFileExists \
	TestFileRead \
	TestFileSync \
	TestFileWrite \
	TestDirSync \
	TestNotify \
	TestPoller \
	TestProcess \
	TestSelector \
	TestServer \
	TestSignalHandler \
	TestTimers \
	ThreadPool \
	TimerExit \
	TestSemaphore

check_PROGRAMS=PIDFile \
	Queueing \
	StringCheck \
	StringChomp \
	StringJoinList \
	StringJoinMap \
	StringJoinVector \
	StringSplitList \
	StringSplitMap \
	StringSplitOne \
	StringSplitVector \
	TestClientConnection \
	TestClient \
	TestClientEvents \
	TestFileExists \
	TestFileRead \
	TestFileSync \
	TestFileWrite \
	TestDirSync \
	TestNotify \
	TestPoller \
	TestProcess \
	TestSelector \
	TestServer \
	TestSignalHandler \
	TestTimers \
	ThreadPool \
	TimerExit \
	TestSemaphore

PIDFile_SOURCES=PIDFile.cpp

Queueing_SOURCES=Queueing.cpp
StringCheck_SOURCES=StringCheck.cpp
StringChomp_SOURCES=StringChomp.cpp
StringJoinList_SOURCES=StringJoinList.cpp
StringJoinMap_SOURCES=StringJoinMap.cpp
StringJoinVector_SOURCES=StringJoinVector.cpp
StringSplitList_SOURCES=StringSplitList.cpp
StringSplitMap_SOURCES=StringSplitMap.cpp
StringSplitOne_SOURCES=StringSplitOne.cpp
StringSplitVector_SOURCES=StringSplitVector.cpp
TestClientConnection_SOURCES=TestClientConnection.cpp
TestClient_SOURCES=TestClient.cpp
TestClientEvents_SOURCES=TestClientEvents.cpp
TestFileExists_SOURCES=TestFileExists.cpp
TestFileRead_SOURCES=TestFileRead.cpp
TestFileSync_SOURCES=TestFileSync.cpp
TestFileWrite_SOURCES=TestFileWrite.cpp
TestDirSync_SOURCES=TestDirSync.cpp
TestNotify_SOURCES=TestNotify.cpp
TestPoller_SOURCES=TestPoller.cpp
TestProcess_SOURCES=TestProcess.cpp
TestSelector_SOURCES=TestSelector.cpp
TestServer_SOURCES=TestServer.cpp
TestSignalHandler_SOURCES=TestSignalHandler.cpp
TestTimers_SOURCES=TestTimers.cpp
ThreadPool_SOURCES=ThreadPool.cpp
TimerExit_SOURCES=TimerExit.cpp
TestSemaphore_SOURCES=TestSemaphore.cpp


